--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,16 @@ div.tooltip {
     position: absolute;
 }
 
+/* #tooltip {
+    color: #222;
+    background-color: #fff;
+    padding: .5em;
+    text-shadow: #f5f5f5 0 1px 0;
+    border-radius: 2px;
+    opacity: 0.9;
+    position: absolute; 
+} */
+
 .line {
     stroke: #ccc;
     stroke-width: 5;
