--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@ body {
     background-color: #e9ebee;
 }
 
-#wordcloudsvg {
+/* #wordcloudsvg {
     position: absolute;
-}
+} */
 
 #button {
     text-align: center;
