--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,37 @@ body {
     background-color: #e9ebee;
 }
 
-/* #wordcloudsvg {
+.jumbotron {
+    text-align: center;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+    text-shadow: 2px 2px #000;
+  }
+  
+.lead span {
+    color: orange;
+    font-weight: bold;
+}
+  
+.bg-cover {
+    background-size: cover;
+    color: white;
+    background-position: center center;
+    position: relative;
+    z-index: -2;
+    background-image: url('../img/img-bg-01.jpg');
+}
+  
+.overlay {
+    background-color: #000;
+    opacity: 0.5;
     position: absolute;
-} */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
 
 .overwordcloud {
     font-weight: bold;
